adds padding directive idk what it means

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,16 @@
 </md-toolbar>
 
 
-
+<md-card [fpadding]="20">
 <friendo-map></friendo-map>
+</md-card>
+
+<md-card>
+  <md-card-title>Submit some shit</md-card-title>
+  <md-card-content>
+
+    <md-input-container>
+      <input mdInput placeholder="Do it bitch">
+    </md-input-container>
+  </md-card-content>
+</md-card>
