dont even know where i am on this

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,3 +9,10 @@
     margin: 24px;
 }
 
+div {
+  background-color: red;
+  border: 1px solid black;
+  padding: 16px;
+  display:inline-block;
+  width: 240px;
+}
