--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,14 +12,13 @@
 
   <friendo-drawer #drawer>
 
-    <md-input-container>
-      <input mdInput placeholder="Test the drawer">
-    </md-input-container>
+    <friendo-autocomplete></friendo-autocomplete>
 
+    
   </friendo-drawer>
 
 </md-card>
-
+ 
 <md-card>
   <md-card-title>Submit some stuff</md-card-title>
   <md-card-content>
@@ -30,3 +29,6 @@
 
   <button md-button color="primary" (click)="drawer.toggle()">drawer</button>
 </md-card>
+
+
+
